# audio-plugin-template

./: README.md
plugin/: CMakeLists.txt
plugin/include/YourPluginName/: PluginProcessor.h
plugin/source/: PluginEditor.cpp  PluginProcessor.cpp
